<resources>
    <string name="app_name">MyWay</string>
    <string name="title_activity_map">Map</string>
    <string name="missing_permission">Requires location permission</string>

    <string name="speed">Speed:</string>
    <string name="time">Time:</string>
    <string name="distance">Distance:</string>
    <string name="avgSpeed">Avg. speed:</string>
    <string name="avg_moving_speed">Avg. moving speed:</string>
    <string name="maxAltitude">Max. alt.:</string>
    <string name="minAltitude">Min. alt.:</string>
    <string name="distance_unit">%.1f m</string>
    <string name="altitude_unit">%.1f m</string>
    <string name="speed_unit">%.1f km/h</string>
    <string name="speed_default">0.0 km/h</string>
    <string name="time_default">0:00:00</string>
    <string name="distance_default">0 m</string>
    <string name="altitude_default">0 m</string>

    <string name="save_way">Save way</string>

    <string name="recording_time_interval_key">record_time_interval</string>
    <string name="recording_time_interval_title">Recording time interval</string>
    <string name="recording_time_interval_summary">%s between recorded locations</string>
    <string name="recording_distance_interval_key">recording_distance_interval_key</string>
    <string name="recording_distance_interval_title">Recording distance interval</string>
    <string name="recording_distance_interval_summary">%s between recorded locations</string>
    <string name="gps_accuracy_key">gps_accuracy_key</string>
    <string name="gps_accuracy_title">Gps accuracy</string>
    <string name="gps_accuracy_summary">Location is ignored if its accuracy is less than %s</string>
    <string name="map_type_key">map_type_key</string>
    <string name="map_type_title">Map type</string>
    <string name="map_type_summary">Default map type: %s</string>

    <string name="settings">Settings</string>
    <string name="menu_new">New</string>
    <string name="menu_history">History</string>
    <string name="new_way_button">New Way</string>
    <string name="history_button">History</string>
    <string name="settings_button">Settings</string>
    <string name="stop_recording">Do you want to stop recording?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="no_history">No history</string>
    <string name="menu_map">Map</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="time_content">Time length for way</string>
    <string name="distance_content">Distance for way</string>
    <string name="record_pause_btn_content">Play and Pause button</string>
    <string name="stop_btn_content">Stop button</string>
    <string name="save">Save</string>
    <string name="way_name">Way name</string>
    <string name="recording_notification">MyWay is recording you location</string>
    <string name="pause_notification">Pause</string>
    <string name="stop_notification">Stop</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="permission_required">App can\'t function without the permission</string>
    <string name="widget_time_text">Time:</string>
    <string name="widget_distance_text">Distance:</string>
    <string name="search">Search…</string>
    <string name="gps_disabled">The gps is disabled, would you like to turn it on?</string>
    <string name="waiting_for_signal">Waiting for signal…</string>
    <string name="menu_map_satellite">Map satellite</string>
    <string name="menu_map_terrain">Map terrain</string>
    <string name="menu_map_normal">Map normal</string>
    <string name="menu_map_hybrid">Map hybrid</string>

</resources>
