<LinearLayout android:id="@+id/widget"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/widget_background"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/widget_time_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            />

        <TextView
            android:id="@+id/widgetTimeText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:contentDescription="@string/distance_content"
            android:gravity="end|center_vertical"
            android:text="@string/time_default"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/widget_distance_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            />

        <TextView
            android:id="@+id/widgetDistanceText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:contentDescription="@string/time_content"
            android:gravity="center_vertical|end"
            android:text="@string/distance_default"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/widgetRecordPauseBtn"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="@drawable/widget_button_background_left"
            android:contentDescription="@string/record_pause_btn_content"
            android:src="@drawable/ic_record_png"/>

        <ImageButton
            android:id="@+id/widgetStopBtn"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/widget_button_background_right"
            android:contentDescription="@string/stop_btn_content"
            android:src="@drawable/ic_stop_png"
            />
    </LinearLayout>


</LinearLayout>